--- a/front-end/front-end/Views/login/Index.cshtml
+++ b/front-end/front-end/Views/login/Index.cshtml
@@ -3,35 +3,36 @@
     Layout = "_Layout";
 }
 <div class="page-center">
-<div class="login-box">
-    <h3 class="text-center login-title">Welcome to HomeAway</h3>
-    <p class="text-center subtitle">please log in or sign up to continue</p>
+    <div class="login-box">
+        <h3 class="text-center login-title">Welcome to HomeAway</h3>
+        <p class="text-center subtitle">please log in or sign up to continue</p>
 
-    <form>
-        <div class="mb-3">
-            <label>Email Address</label>
-            <input type="email" class="form-control" placeholder="Enter your email">
-        </div>
+        <form asp-action="Index" asp-controller="Login" method="post">
+            <div class="mb-3">
+                <label>Email Address</label>
+                <input type="email" name="UserName" class="form-control" placeholder="Enter your email" required>
+            </div>
 
-        <div class="mb-3">
-            <label>Password</label>
-            <input type="password" class="form-control" placeholder="Enter your password">
-        </div>
+            <div class="mb-3">
+                <label>Password</label>
+                <input type="password" name="Password" class="form-control" placeholder="Enter your password" required>
+            </div>
 
-        <div class="form-check mb-3">
-            <input class="form-check-input" type="checkbox" id="remember">
-            <label class="form-check-label" for="remember">Remember me</label>
-        </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="remember">
+                <label class="form-check-label" for="remember">Remember me</label>
+            </div>
 
-        <button class="btn btn-primary w-100 btn-main mb-3">Login</button>
+            <button type="submit" class="btn btn-primary w-100 btn-main mb-3">Login</button>
+
             <a asp-controller="Signup" asp-action="Index" class="btn btn-outline-primary w-100 btn-main">
                 Sign Up
             </a>
-
-
-        <div class="text-center mt-3">
-            <a href="#">Forgot your password?</a>
-        </div>
-    </form>
-</div>
+            <!--
+            <div class="text-center mt-3">
+                <a href="#">Forgot your password?</a>
+            </div>
+            -->
+        </form>
+    </div>
 </div>
