--- a/front-end/front-end/Views/reserve/Index.cshtml
+++ b/front-end/front-end/Views/reserve/Index.cshtml
@@ -64,6 +64,8 @@
             <p>Taxes & Fees <span>$59.70</span></p>
             <p class="total">Total <span>$656.70</span></p>
         </div>
-        <button class="btn btn-reserve">Reserve Now</button>
+        <a asp-controller="payment" asp-action="Index" class="btn btn-outline-primary w-100 btn-main">
+            reserve and buy
+        </a>
     </aside>
 </div>
