--- a/front-end/front-end/Views/search/Index.cshtml
+++ b/front-end/front-end/Views/search/Index.cshtml
@@ -18,10 +18,23 @@
         </div>
         <div class="filter-group">
             <h4>Amenities</h4>
-            <div><input type="checkbox"> Free WiFi</div>
-            <div><input type="checkbox"> Swimming Pool</div>
-            <div><input type="checkbox"> Free Parking</div>
+
+            <div class="amenity">
+                <input type="checkbox" id="wifi">
+                <label for="wifi">Free WiFi</label>
+            </div>
+
+            <div class="amenity">
+                <input type="checkbox" id="pool">
+                <label for="pool">Swimming Pool</label>
+            </div>
+
+            <div class="amenity">
+                <input type="checkbox" id="parking">
+                <label for="parking">Free Parking</label>
+            </div>
         </div>
+
         <button class="btn btn-apply">Apply Filters</button>
     </aside>
 
