--- a/front-end/front-end/Views/admin/dashboard.cshtml
+++ b/front-end/front-end/Views/admin/dashboard.cshtml
@@ -57,8 +57,8 @@
                 {
                     <tr>
                         <td>#@r.Id</td>
-                        <td>@Model.Users.FirstOrDefault(u => u.Id == r.UserId)?.FullName</td>
-                        <td>@Model.Hotels.FirstOrDefault(h => h.Id == r.RoomId)?.Name</td>
+                        <td>@(Model.Users.FirstOrDefault(u => u.Id == r.UserId)?.FullName ?? "User Deleted")</td>
+                        <td>@(Model.Hotels.FirstOrDefault(h => h.Id == r.RoomId)?.Name)</td>
                         <td>@r.From.ToString("d")</td>
                         <td>@r.To.ToString("d")</td>
                         <td>$@r.TotalPrice.ToString("0.00")</td>
