--- a/front-end/front-end/Views/admin/dashboard.cshtml
+++ b/front-end/front-end/Views/admin/dashboard.cshtml
@@ -23,7 +23,11 @@
         <!-- Header -->
         <div class="admin-header">
             <h2>Admin Dashboard</h2>
-            <button class="btn-admin-user">Admin User</button>
+            <a asp-controller="Signup" asp-action="ashotelowner"
+               class="btn btn-outline-primary px-3 py-1">
+                Add Admin
+            </a>
+
         </div>
 
         <!-- Stats cards -->
